--- a/404.html
+++ b/404.html
@@ -4,6 +4,6 @@ title: "404: Page not found"
 ---
 
 <div class="page">
-  <h1 class="page-title">404: Page not found</h1>
-  <p class="lead">Whoops! Seems like we've lost the page you're looking for.</p>
+  <h1 class="heading">404: Page not found</h1>
+  <p class="subcontent">Whoops! Seems like we've lost the page you're looking for.</p>
 </div>
