--- a/404.html
+++ b/404.html
@@ -3,7 +3,10 @@ layout: default
 title: "404: Page not found"
 ---
 
-<div class="page">
+<div class="page404">
   <h1 class="heading">404: Page not found</h1>
-  <p class="subcontent">Whoops! Seems like we've lost the page you're looking for.</p>
+  <div class="subcontent">
+    <img src="img/404.png" alt="404 Error"/>
+    <p>Whoops! Seems like we've lost the page you're looking for.</p>
+  </div>
 </div>
