laying groundwork for other files

--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@ title: Helium
 <div id="home">
   <div class="heading"><h2>Floating Thoughts</h2></div>
   <div class="subcontent">
-      <p>Lorem ipsum dolor sit amet stack o verflow dot com</p>
+      <p>Hello. I write lines. This blog addresses topics in programming and life. You can check it out <a href="/blog">here</a>.</p>
+      <p>The most recent post concerns <a href="#">blahblahblah</a>.</p>
   </div>
   <br></br>
   <div class="heading"><h2>Works in Progress</h2></div>
   <div class="subcontent">
-      <p>Lorem ipsum dolor sit amet stack o verflow dot com</p>
+      <ul>
+        <li><a href="https://github.com/heliumtank/backpack">Backpack</a> - Configuration files</li>
+      </ul>
   </div>
   <br></br>
   <div class="heading"><h2>Completed Projects</h2></div>
   <div class="subcontent">
       <ul>
-          <li>This Website (sorta)</li>
-      <ul>
+          <li><a href="https://github.com/heliumtank/heliumtank.github.io">Personal Website</a></li>
+      </ul>
   </div>
 </div>
