--- a/404.html
+++ b/404.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: "404: Page not found"
+title: "404 Error"
 ---
 
-<div class="page404">
+<div id="page404">
   <h1 class="heading">404: Page not found</h1>
   <div class="subcontent">
-    <img src="img/404.png" alt="404 Error"/>
-    <p>Whoops! Seems like we've lost the page you're looking for.</p>
+    <img src="/img/404.png" alt="404 Error"/>
+    <p>Whoops! Seems like we've lost the page you're looking for. <a href="/">Go home</a>.</p>
   </div>
 </div>
