projects page is finished

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@ title: "404 Error"
 ---
 
 <div id="page404">
-  <h1 class="heading">404: Page not found</h1>
+  <div class="heading"><h1>404: Page not found</h1></div>
   <div class="subcontent">
     <img src="/img/404.png" alt="404 Error"/>
     <p>Whoops! Seems like we've lost the page you're looking for. <a href="/">Go home</a>.</p>
