--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@ title: Helium - About
 <div id="about">
     <div class="heading"><h2>About the Site</h2></div>
     <div class="subcontent">
-        <p><strong>Everything is hacked together</strong> from this website to the clothes you decided to wear this morning. We cannot make perfect decisions consistently, because we have neither perfect information nor perfect decision making skills. However, we try to optimize our decisions with the limited knowledge we have by applying heuristics. We fit questions into frameworks that produce answers.</p>
+        <p><strong>Everything is hacked together</strong> whether it's this website or the outfit you put together this morning. Usually we cannot make perfect decisions, because we have neither perfect information nor perfect decision making skills. However, we try to optimize our decisions with the limited knowledge we have by applying heuristics. We fit questions into frameworks that produce answers.</p>
         <p>This site focuses on my adventures in life and programming. It chronicles my experiments in problem solving. We can't always make the right decisions or write the best code, but we can learn from our mistakes. Hopefully, my shared experiences can help others work faster and avoid the same errors.</p>
     </div>
     <br/>
