--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Helium
+title: Chelium
 ---
 
 <div id="home">
@@ -13,14 +13,14 @@ title: Helium
   <div class="heading"><h2>Works in Progress</h2></div>
   <div class="subcontent">
       <ul>
-        <li><a href="https://github.com/heliumtank/backpack">Backpack</a> - Configuration files</li>
+        <li><a href="https://github.com/chelium/backpack">Backpack</a> - Configuration files</li>
       </ul>
   </div>
   <br/>
   <div class="heading"><h2>Completed Projects</h2></div>
   <div class="subcontent">
       <ul>
-          <li><a href="https://github.com/heliumtank/heliumtank.github.io">Personal Website</a></li>
+          <li><a href="https://github.com/chelium/chelium.github.io">Personal Website</a></li>
       </ul>
   </div>
 </div>
