--- a/about/index.html
+++ b/about/index.html
@@ -6,12 +6,11 @@ title: Helium - About
 <div id="about">
     <div class="heading"><h2>About the Site</h2></div>
     <div class="subcontent">
-        <p><strong>Everything is hacked together</strong> whether it's this website or the outfit you put together this morning. Usually we cannot make perfect decisions, because we have neither perfect information nor perfect decision making skills. However, we try to optimize our decisions with the limited knowledge we have by applying heuristics. We fit questions into frameworks that produce answers.</p>
-        <p>This site focuses on my adventures in life and programming. It chronicles my experiments in problem solving. We can't always make the right decisions or write the best code, but we can learn from our mistakes. Hopefully, my shared experiences can help others work faster and avoid the same errors.</p>
+        <p><strong>Everything is hacked together.</strong> This blog is a testament to that. Here are my adventures in life and programming.</p>
     </div>
     <br/>
     <div class="heading"><h2>About Me</h2></div>
     <div class="subcontent">
-        <p>I'm an Aerospace Engineering major at the UIUC. I solve problems. If you have any interesting problems or questions, or if you just want to contact me, you can write an email to <a href="mailto:tankofhelium@gmail.com">tankofhelium@gmail.com</a>.</p>
+        <p>I'm an Comp Sci major at the SIUE. I solve problems. If you have any interesting problems or questions, or if you just want to contact me, you can write an email to <a href="mailto:helixmaker@gmail.com">helixmaker@gmail.com</a>.</p>
     </div>
 </div>
