Cleanup content; Update config

--- a/about/index.html
+++ b/about/index.html
@@ -11,6 +11,6 @@ title: Helium - About
     <br/>
     <div class="heading"><h2>About Me</h2></div>
     <div class="subcontent">
-        <p>I'm an Comp Sci major at the SIUE. I solve problems. If you have any interesting problems or questions, or if you just want to contact me, you can write an email to <a href="mailto:helixmaker@gmail.com">helixmaker@gmail.com</a>.</p>
+        <p>I solve problems. If you have any interesting problems or questions, or if you just want to contact me, you can write an email to <a href="mailto:chris7he@gmail.com">chris7he@gmail.com</a>.</p>
     </div>
 </div>
