--- a/projects/index.html
+++ b/projects/index.html
@@ -5,14 +5,10 @@ title: Helium - Projects
 
 <div id="projects">
   <div class="heading"><h2>In Progress</h2></div>
-  <div class="subcontent">
-    <h3>Backpack</h3>
-    <p>I'm working on packaging my <a href="https://github.com/heliumtank/backpack">configuration files</a> so I can port them to any workspace I need them in.</p>
-  </div>
   <br/>
   <div class="heading"><h2>Finished Projects</h2></div>
   <div class="subcontent">
     <h3>Personal Website</h3>
-    <p>I built this site using <a href="https://jekyllrb.com">Jekyll</a>. The source is on <a href="https://github.com/heliumtank/heliumtank.github.io">Github</a> where this site is also hosted.</p>
+    <p>I built this site using <a href="https://jekyllrb.com">Jekyll</a>. The source is on <a href="https://github.com/chelium/chelium.github.io">Github</a> where this site is also hosted.</p>
   </div>
 </div>
